app/src/main/java/com/example/desafio/domain/commons/errors/NetworkConnection.kt
package com.example.desafio.domain.commons.errors

class NetworkConnection : Exception() {
}